--- a/app/views/user/new.html.haml
+++ b/app/views/user/new.html.haml
@@ -19,10 +19,10 @@
         %h4 Profile
         .user-user-profile.row
           .user-name.col-md-12
-            %textarea{name: "textarea", cols: "30", rows: => "4", placeholder: "Profile"}
+            %textarea{name: "textarea", cols: "30", rows: "4", placeholder: "Profile"}
         %h4 Works 
         .user-name_image.row
           .user-name.col-md-12
-            %textarea{name: "textarea", cols: "30", rows: => "4", placeholder: "Works"}
+            %textarea{name: "textarea", cols: "30", rows: "4", placeholder: "Works"}
     .row.text-center.user-btn
       %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Save
