--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -22,10 +22,10 @@
           %h4 Profile
           .user-user-profile.row
             .user-name.col-md-12
-              = f.text_area :profile, placeholder: "Profile", :cols => "30", :rows => "4"
+              = f.text_area :profile, placeholder: "Profile", cols: "30", rows: "4"
           %h4 Works
           .user-name_image.row
             .user-name.col-md-12
-              = f.text_area :works, placeholder: "Works", :cols => "30", :rows => "4"
+              = f.text_area :works, placeholder: "Works", cols: "30", rows: "4"
       .row.text-center.user-btn
         = f.submit "Save", class: "btn btn-lg btn-primary btn-block"
