--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,10 +21,11 @@
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li
-                =link_to 'プロフィール編集',edit_user_registration_path(current_user),method: :get
+                =link_to 'プロフィール編集',"/users/#{current_user.id}/edit"
               %li
-                =link_to 'ログアウト',destroy_user_session_path,method: :delete
+                =link_to 'ログアウト',destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
               %a{ href: "/proto/new"}
                 New Proto
+
