--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,13 +1,13 @@
 .container.user-new
   = form_for current_user do |f|
     .col-md-8.col-md-offset-2
-      %header.row.user-nav
+      %header.row.user-nav.row
         .col-md-12
-          %h2 Edit your profile
+          %h2 Edit Profile
           .user-name_image.row
             .user-name.col-md-10
               = f.text_field :user_name, placeholder: "Username"
-            .user-image.col-md-2
+            .user-image.col-md-2{:style => 'background-image: url();'}
               %button.btn.btn-primary Change image
               = f.file_field :avatar
           .user-email
@@ -22,10 +22,10 @@
           %h4 Profile
           .user-user-profile.row
             .user-name.col-md-12
-              = f.text_area :profile, placeholder: "Profile", :cols => "30", :rows => "4"
+              = f.text_area :profile, placeholder: "Profile", cols: "30", rows: "4"
           %h4 Works
           .user-name_image.row
             .user-name.col-md-12
-              = f.text_area :works, placeholder: "Works", :cols => "30", :rows => "4"
+              = f.text_area :works, placeholder: :"Works", cols: "30", rows: "4"
       .row.text-center.user-btn
         = f.submit "Save", class: "btn btn-lg btn-primary btn-block"
