--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -26,6 +26,6 @@
                 =link_to 'ログアウト',destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
-              %a{ href: "/proto/new"}
+              %a{ href: "/protos/new"}
                 New Proto
 
