--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,11 +21,10 @@
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li
-                =link_to 'プロフィール編集',"/users/#{current_user.id}/edit"
+                =link_to 'プロフィール編集', "/users/#{current_user.id}/edit"
               %li
-                =link_to 'ログアウト',destroy_user_session_path, method: :delete
+                =link_to 'ログアウト', destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
-              %a{ href: "/protos/new"}
-                New Proto
+              =link_to 'New Proto', new_proto_path
 
