--- a/app/views/protos/new.html.haml
+++ b/app/views/protos/new.html.haml
@@ -1,29 +1,35 @@
-.container.proto-new{action: ""}
-  = form_for @proto do |f|
+.container.proto-new
+  = form_for (@proto) do |f|
     .col-md-8.col-md-offset-2
       %header.row.user-nav.row
         .col-md-12
-          %input.proto-new-title{name: "title", type: "text", placeholder: "Title"}/
+          =f.text_field :title, placeholder: "Title", class: "proto-new-title"
       .row
         .col-md-12
           .cover-image-upload
-            %input{type: "file"}/
-        .col-md-12
-          %ul.proto-sub-list.list-group
-            %li.list-group-item.col-md-4
-              .image-upload
-                %input{type: "file"}/
-            %li.list-group-item.col-md-4
-              .image-upload
-                %input{type: "file"}/
-            %li.list-group-item.col-md-4
-              .image-upload-plus
-                %span +
+            =f.fields_for :images do |image|
+              =image.file_field :image
+              =image.hidden_field :status, value: 0
+          .col-md-12
+            %ul.proto-sub-list.list-group
+              %li.list-group-item.col-md-4
+                .image-upload
+                  =f.fields_for :images do |image|
+                    =image.file_field :image
+                    =image.hidden_field :status, value: 1
+              %li.list-group-item.col-md-4
+                .image-upload
+                  =f.fields_for :images do |image|
+                    =image.file_field :image
+                    =image.hidden_field :status, value: 1
+              %li.list-group-item.col-md-4
+                .image-upload-plus
+                  %span +
       .row.proto-description
         .col-md-12
-          %input{name: "catch_copy", type: "text", placeholder: "Catch Copy"}/
+          =f.text_field :catch_copy, placeholder: "Catch Copy"
         .col-md-12
-          %textarea{name: "concept", cols: "30", rows: "4", placeholder: "Concept"}
+          =f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
         .col-md-12
           %h4 Tag List
           .row
@@ -34,5 +40,5 @@
             .col-md-3
               %input{type: "text", placeholder: "Application"}/
       .row.text-center.proto-btn
-        %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Publish
+        =f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
 
