--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,9 +21,11 @@
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li
-                =link_to 'プロフィール編集', "/users/#{current_user.id}/edit"
+                =link_to 'My Page', user_path(current_user)
               %li
-                =link_to 'ログアウト', destroy_user_session_path, method: :delete
+                =link_to 'Edit Profile', "/users/#{current_user.id}/edit"
+              %li
+                =link_to 'Logout', destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
               =link_to 'New Proto', new_proto_path
