--- a/app/views/protos/edit.html.haml
+++ b/app/views/protos/edit.html.haml
@@ -7,19 +7,19 @@
       .row
         .col-md-12
           .cover-image-upload
-            =f.fields_for :images do |image|
+            =f.fields_for :images, @proto.images.main do |image|
               =image.file_field :image
               =image.hidden_field :status, value: 'main'
         .col-md-12
           %ul.proto-sub-list.list-group
             %li.list-group-item.col-md-4
               .image-upload
-                =f.fields_for :images do |image|
+                =f.fields_for :images, @proto.images.sub.first do |image|
                   =image.file_field :image
                   =image.hidden_field :status, value: 'sub'
             %li.list-group-item.col-md-4
               .image-upload
-                =f.fields_for :images do |image|
+                =f.fields_for :images, @proto.images.sub.last do |image|
                   =image.file_field :image
                   =image.hidden_field :status, value: 'sub'
             %li.list-group-item.col-md-4
