--- a/app/views/protos/show.html.haml
+++ b/app/views/protos/show.html.haml
@@ -3,15 +3,14 @@
     .col-md-6
       .media
         .media-left
-          =link_to image_tag(@proto.user.avatar, alt: "64x64", class: "media-object", style: "width: 64px; height: 64px;", data: {src: "holder.js/64x64"}, data:{ holder: { rendered: "true" } }), user_path(@proto.user)
+          = link_to image_tag(@proto.user.avatar, alt: "64x64", class: "media-object", style: "width: 64px; height: 64px;", data: {src: "holder.js/64x64"}, data:{ holder: { rendered: "true" } }), user_path(@proto.user)
         .media-body
           %h4#top-aligned-media.media-heading
             Top aligned media
           .proto-user
-            %a{href: ""}
-              by #{@proto.user.user_name}
+            = link_to "by #{@proto.user.user_name}", user_path(@proto.user)
             %span.degree
-              =current_user.member
+              = current_user.member
     .col-md-6.text-right
       %button.btn.btn-default
         = image_tag("icon_heart.svg")
@@ -22,17 +21,17 @@
       = image_tag( @proto.images.main.first.image, class: 'img-responsive')
     .col-md-3
       %ul.proto-sub-list.list-group
-        =render partial:'sub_image', collection: @proto.images.sub
+        = render partial: 'sub_image', collection: @proto.images.sub
 
   .row.proto-description
     .col-md-3
       %h4 Catch Copy
       %p
-        =@proto.catch_copy
+        = @proto.catch_copy
     .col-md-6
       %h4 Concept
       %p
-        =@proto.concept
+        = @proto.concept
     .col-md-3
       %h4 Tag List
       %ul.proto-tag-list.list-inline
