protoの部分テンプレートをprotoのビューに移動。それに伴って部分テンプレートの呼び出し元の記述を変更。

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -24,7 +24,7 @@
               = current_user.works
 .container.proto-list
   .row
-    = render partial:'top/proto',collection: current_user.protos
+    = render partial:'protos/proto',collection: current_user.protos
 
 .text-center
   %ul.pagination
