--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -28,5 +28,5 @@
                 =link_to 'Logout', destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
-              =link_to 'New Proto', new_proto_path
+              =link_to 'New Proto', new_prototype_path
 
