--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -3,12 +3,12 @@
     .col-md-6
       .media
         .media-left
-          = link_to image_tag(@proto.user.avatar, alt: "64x64", class: "media-object", style: "width: 64px; height: 64px;", data: {src: "holder.js/64x64"}, data:{ holder: { rendered: "true" } }), user_path(@proto.user)
+          = link_to image_tag(@prototype.user.avatar, alt: "64x64", class: "media-object", style: "width: 64px; height: 64px;", data: {src: "holder.js/64x64"}, data:{ holder: { rendered: "true" } }), user_path(@prototype.user)
         .media-body
           %h4#top-aligned-media.media-heading
             Top aligned media
           .proto-user
-            = link_to "by #{@proto.user.user_name}", user_path(@proto.user)
+            = link_to "by #{@prototype.user.user_name}", user_path(@prototype.user)
             %span.degree
               = current_user.member
     .col-md-6.text-right
@@ -18,20 +18,20 @@
         %span.num 20
   .row
     .col-md-9
-      = image_tag( @proto.images.main.first.image, class: 'img-responsive')
+      = image_tag( @prototype.images.main.first.image, class: 'img-responsive')
     .col-md-3
       %ul.proto-sub-list.list-group
-        = render partial: 'sub_image', collection: @proto.images.sub
+        = render partial: 'sub_image', collection: @prototype.images.sub
 
   .row.proto-description
     .col-md-3
       %h4 Catch Copy
       %p
-        = @proto.catch_copy
+        = @prototype.catch_copy
     .col-md-6
       %h4 Concept
       %p
-        = @proto.concept
+        = @prototype.concept
     .col-md-3
       %h4 Tag List
       %ul.proto-tag-list.list-inline
