--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -13,7 +13,7 @@
       %button{type: "button", class: "btn btn-default col-lg-1"} View Tags
 .container.proto-list
   .row
-    = render @protos
+    = render @prototypes
 
 .text-center
   %ul.pagination
