like機能の実装。

--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -13,7 +13,7 @@
               = current_user.member
     .col-md-6.text-right
       #like-button
-        = render partial: 'likes/like', locals: {prototype: @prototype, likes: @likes, like: @like}
+        = render partial: 'likes/like'
 
   .row
     .col-md-9
