likeボタンを他のユーザーが削除できないように仕様変更。

--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -45,7 +45,7 @@
         = @prototype.comments.length
     .col-md-8
       #comments
-        = render partial: 'comments/comment',collection: @comments
+        = render @comments
       .form-inline
         = form_for @comment, remote: true do |f|
           %h4 Write a comment
