--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
 $("#comment_text").val("");
-$("#comments").html("<%= j(render partial: 'comments/comment',collection: @comments) %>");
+$("#comments").html("<%= j(render @comments) %>");
 $("span.num").html("<%= @comments.length %>")
