--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -17,7 +17,6 @@
         .proto-date
           = prototype.created_at
       %ul.proto-tag-list.list-inline
-        %li
-          %a{href: "#", class: "btn btn-default"} iPad
-        %li
-          %a{href: "#", class: "btn btn-default"} wireframe
+        - prototype.tag_list.each do |tag|
+          %li
+            = link_to tag, tag_path(tag), class: "btn btn-default"
