--- a/app/views/prototypes/edit.html.haml
+++ b/app/views/prototypes/edit.html.haml
@@ -34,11 +34,10 @@
           %h4 Tag List
           .row
             .col-md-3
-              %input{type: "text", placeholder: "Web Design"}/
+              = text_field_tag "tags[]", "", value: @prototype.tags[0], placeholder: "Web Design"
             .col-md-3
-              %input{type: "text", placeholder: "UI"}/
+              = text_field_tag "tags[]", "", value: @prototype.tag_list[1], placeholder: "UI"
             .col-md-3
-              %input{type: "text", placeholder: "Application"}/
+              = text_field_tag "tags[]", "", value: @prototype.tag_list[2], placeholder: "Application"
       .row.text-center.proto-btn
         = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
-
