--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -16,9 +16,7 @@
             = link_to "Popular PROTO", root_path
           %li.active{role: "presentation"}
             =link_to "Newest PROTO", newest_prototypes_path
-
-      %button{type: "button", class: "btn btn-default col-lg-1"} View Tags
-
+      = button_to "View Tags", tags_path, method: :get, class: "btn btn-default col-lg-1"
 
 .container.proto-list
   .row
