--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -23,10 +23,10 @@
               %li
                 =link_to 'My Page', user_path(current_user)
               %li
-                =link_to 'Edit Profile', "/users/#{current_user.id}/edit"
+                =link_to 'Edit Profile', "/users/#{current_user.id}/edit", data: { no_turbolink: true }
               %li
                 =link_to 'Logout', destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
-              =link_to 'New Proto', new_prototype_path
+              =link_to 'New Proto', new_prototype_path, data: { no_turbolink: true }
 
