--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -7,7 +7,7 @@
         %li
           = link_to "Delete", prototype_path(prototype), method: :delete, rel: "nofollow", data:{ method: "delete"}
         %li
-          = link_to "Edit", edit_prototype_path(prototype)
+          = link_to "Edit", edit_prototype_path(prototype), data: { no_turbolink: true }
   .thumbnail
     = link_to image_tag(prototype.images.main.first.image), prototype_path(prototype.id)
     .caption
