--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -7,7 +7,7 @@
           .user-name_image.row
             .user-name.col-md-10
               = f.text_field :user_name, placeholder: "Username"
-            .user-image.col-md-2{:style => 'background-image: url();'}
+            .user-image.col-md-2{style: "background-image : url(#{current_user.avatar});"}
               %button.btn.btn-primary Change image
               = f.file_field :avatar
           .user-email
