サブイメージが登録されていない場合に枠を非表示にする。

--- a/app/views/prototypes/_sub_image.html.haml
+++ b/app/views/prototypes/_sub_image.html.haml
@@ -1,2 +1,3 @@
-%li.list-group-item
-  = image_tag( sub_image.image, class: 'img-responsive')
+- unless sub_image.image.blank?
+  %li.list-group-item
+    = image_tag( sub_image.image, class: 'img-responsive')
