プロトタイプのcreated_atの表記を変更。プロトタイプの作成者へのリンクを作成。

--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -312,6 +312,10 @@ body {
     font-size: 1.2rem;
     padding: 10px 0;
     
+    .proto-date{
+      float:right;
+    }
+
     .proto-user {
       float: left;
     }
