--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -14,8 +14,10 @@
       %h3
         = prototype.title
       .proto-meta
+        .proto-user
+          = link_to "by #{prototype.user.user_name}", user_path(prototype.user)
         .proto-date
-          = prototype.created_at
+          = prototype.created_at.strftime('%b %d')
       %ul.proto-tag-list.list-inline
         - prototype.tag_list.each do |tag|
           %li
