サインインしていないユーザーがnewを呼び出せないように変更。show内の間違った表記を修正。

--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -10,7 +10,7 @@
           .proto-user
             = link_to "by #{@prototype.user.user_name}", user_path(@prototype.user)
             %span.degree
-              = current_user.member
+              = @prototype.user.member
     .col-md-6.text-right
       #like-button
         = render partial: 'likes/like'
