--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -1,53 +1,53 @@
-.container.proto-new
-  = form_for (@prototype) do |f|
-    .col-md-8.col-md-offset-2
-      %header.row.user-nav.row
-        .col-md-12
-          = f.text_field :title, placeholder: "Title", class: "proto-new-title"
-      .row
-        .col-md-12
-          .cover-image-upload
-            = f.fields_for :images do |image|
-              = image.file_field :image
-              = image_tag (), {id: "main_preview"}
-              = image.hidden_field :status, value: 'main'
-        .col-md-12
-          %ul.proto-sub-list.list-group.appear_form
-            %li.list-group-item.col-md-4
-              .image-upload
-                = f.fields_for :images do |image|
-                  = image.file_field :image
-                  = image_tag (), {id: "sub_1"}
-                  = image.hidden_field :status, value: 'sub'
-            %li.list-group-item.col-md-4.appear_form
-              .image-upload
-                = f.fields_for :images do |image|
-                  = image.file_field :image
-                  = image_tag (), {id: "sub_2"}
-                  = image.hidden_field :status, value: 'sub'
-            %li.list-group-item.col-md-4.hide_form
-              .image-upload
-                = f.fields_for :images do |image|
-                  = image.file_field :image
-                  = image_tag (), {id: "sub_3"}
-                  = image.hidden_field :status, value: 'sub'
-            %li.list-group-item.col-md-4#add_new_form
-              .image-upload-plus
-                %span +
-      .row.proto-description
-        .col-md-12
-          = f.text_field :catch_copy, placeholder: "Catch Copy"
-        .col-md-12
-          = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
-        .col-md-12
-          %h4 Tag List
-          .row
-            .col-md-3
-              = text_field_tag "tags[]", "", placeholder: "Web Design"
-            .col-md-3
-              = text_field_tag "tags[]", "", placeholder: "UI"
-            .col-md-3
-              = text_field_tag "tags[]", "", placeholder: "Application"
-      .row.text-center.proto-btn
-        = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
+= form_for (@prototype), html: {class: "container proto-new"} do |f|
+  .col-md-8.col-md-offset-2
+    %header.row.user-nav.row
+      .col-md-12
+        = f.text_field :title, placeholder: "Title", class: "proto-new-title"
+    .row
+      .col-md-12
+        .cover-image-upload
+          = f.fields_for :images do |image|
+            = image.file_field :image
+            = image_tag (), {id: "main_preview"}
+            = image.hidden_field :status, value: 'main'
+      .col-md-12
+        %ul.proto-sub-list.list-group.appear_form
+          %li.list-group-item.col-md-4
+            .image-upload
+              = f.fields_for :images do |image|
+                = image.file_field :image
+                = image_tag (), {id: "sub_1"}
+                = image.hidden_field :status, value: 'sub'
+          %li.list-group-item.col-md-4.appear_form
+            .image-upload
+              = f.fields_for :images do |image|
+                = image.file_field :image
+                = image_tag (), {id: "sub_2"}
+                = image.hidden_field :status, value: 'sub'
+          %li.list-group-item.col-md-4.hide_form
+            .image-upload
+              = f.fields_for :images do |image|
+                = image.file_field :image
+                = image_tag (), {id: "sub_3"}
+                = image.hidden_field :status, value: 'sub'
+          %li.list-group-item.col-md-4#add_new_form
+            .image-upload-plus
+              %span +
+    .row.proto-description
+      .col-md-12
+        = f.text_field :catch_copy, placeholder: "Catch Copy"
+      .col-md-12
+        = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
+      .col-md-12
+        %h4 Tag List
+        .row
+          .col-md-3
+            = text_field_tag "tags[]", "", placeholder: "Web Design"
+          .col-md-3
+            = text_field_tag "tags[]", "", placeholder: "UI"
+          .col-md-3
+            = text_field_tag "tags[]", "", placeholder: "Application"
+    .row.text-center.proto-btn
+      = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
+}
 
