--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,8 +11,7 @@
         %ul.nav.navbar-nav.navbar-right
           %li
             .btn.btn-primary.navbar-btn
-              %a{ href: "/users/sign_in"}
-                Get Started
+              = link_to "Get Started", new_user_session_path
       -else
         %ul.nav.navbar-nav.navbar-right
           %li.dropdown
@@ -23,10 +22,10 @@
               %li
                 =link_to 'My Page', user_path(current_user)
               %li
-                =link_to 'Edit Profile', "/users/#{current_user.id}/edit", data: { no_turbolink: true }
+                =link_to 'Edit Profile', edit_user_path(current_user)
               %li
                 =link_to 'Logout', destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
-              =link_to 'New Proto', new_prototype_path, data: { no_turbolink: true }
+              =link_to 'New Proto', new_prototype_path
 
