--- a/app/views/prototypes/edit.html.haml
+++ b/app/views/prototypes/edit.html.haml
@@ -17,16 +17,19 @@
               .image-upload
                 = f.fields_for :images, @prototype.images.sub.first do |image|
                   = image.file_field :image
+                  = image_tag (), {id: "sub_1"}
                   = image.hidden_field :status, value: 'sub'
             %li.list-group-item.col-md-4.hide_form
               .image-upload
                 = f.fields_for :images, @prototype.images.sub.last do |image|
                   = image.file_field :image
+                  = image_tag (), {id: "sub_2"}
                   = image.hidden_field :status, value: 'sub'
             %li.list-group-item.col-md-4.hide_form
               .image-upload
                 = f.fields_for :images, @prototype.images.sub.last do |image|
                   = image.file_field :image
+                  = image_tag (), {id: "sub_3"}
                   = image.hidden_field :status, value: 'sub'
             %li.list-group-item.col-md-4#add_new_form
               .image-upload-plus
